<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".MobileVerification">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/icon_bg"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/icon_bg"
        android:id="@+id/canclebtn"
        android:src="@drawable/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_verification"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canclebtn" />

    <ImageView
        android:layout_width="200px"
        android:layout_height="200px"
        android:background="@drawable/circle"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/circle"
        android:layout_marginTop="300dp"
        app:layout_constraintWidth_percent="1.20"
        app:layout_constraintHeight_percent=".50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/graphic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:background="@drawable/gradient_bg"
        android:id="@+id/bg"
        app:layout_constraintBottom_toTopOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/constraint"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_otp"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/text"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/h1"
            app:layout_constraintTop_toBottomOf="@+id/text"
            android:background="@drawable/horizontal_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/otp_send_to"
            android:textColor="#0c0c0c"
            android:id="@+id/phonetext"
            android:layout_marginStart="30dp"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/h1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bg"
            android:id="@+id/edittext"
            android:textSize="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:maxLength="6"
            app:layout_constraintTop_toBottomOf="@+id/phonetext"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/h2"
            app:layout_constraintTop_toBottomOf="@+id/edittext"
            android:background="@drawable/horizontal_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:textColor="@color/nextbtnColor"
            app:layout_constraintTop_toBottomOf="@+id/h2"
            android:textSize="12dp"
            android:textStyle="bold"
            android:id="@+id/resend_btn"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/nextbtn_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/next"
            android:id="@+id/nextbtn"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resend_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>